tests/golden/defaults/lieutenant/lieutenant/20_api/ingress-lieutenant-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations: {}
  labels:
    app.kubernetes.io/name: lieutenant-api
    app.kubernetes.io/part-of: project-syn
    name: lieutenant-api
  name: lieutenant-api
  namespace: lieutenant
spec:
  rules:
    - host: lieutenant.todo
      http:
        paths:
          - backend:
              service:
                name: lieutenant-api
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - lieutenant.todo
      secretName: lieutenant-api-cert
