tests/golden/defaults/lieutenant/lieutenant/20_api/service-lieutenant-api.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: lieutenant-api
    app.kubernetes.io/part-of: project-syn
  name: lieutenant-api
  namespace: lieutenant
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: lieutenant-api
    app.kubernetes.io/part-of: project-syn
  type: ClusterIP
